# hockeydata

./: .gitignore  Python Hockey Analytics Tutorial.ipynb  api-notes.md  api_helper.py  download_testing.ipynb  main.py  pandas.ipynb  pyproject.toml  testing.ipynb
adjusted_fenwick/: AddScoresToAllEvents.sql  PerTeamGameFenwickAndScore.sql  README.md  adjusted_fenwick.ipynb
backend-python/: main.py  pyproject.toml
backend-ts/: package-lock.json  package.json
db/: AdjustedCorsi.sql  AdjustedFenwick.sql  AllPlayerIds.sql  GoalieLifetimeSavePct.sql  PerTeamGameFenwickAndScore.sql  event_shots.sql
frontend-rr/: package-lock.json  package.json
frontend-rr/app/welcome/: welcome.tsx
frontend-ts/: index.html  package-lock.json  package.json
hockey_pipeline/: pyproject.toml
hockey_pipeline/src/hockey_pipeline/: definitions.py
hockey_pipeline/src/hockey_pipeline/defs/: assets.py  resources.py
hockey_pipeline/src/hockey_pipeline/defs/oscar/: train.py  transform.py
hockey_pipeline/src/hockey_pipeline/defs/transformation/: AddScoresTransform.sql  AdjustedFenwick.sql  GoalieLifetimeSavePct.sql  PerTeamGameFenwickAndScore.sql  PerTeamGameFenwickAndScoreCached.sql  ShotGenSup5v4.sql  ShotGenSup5v4Last25.sql  TeamGames.sql  TeamScoringPercentage.sql  UnblockedShotGenSup.sql  UnblockedShotGenSupLast25.sql  assets.py  shot_events.sql
oscar replica/: oscar.ipynb  plan.md
