[project]
name = "hockey_pipeline"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.11.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.6.1",
    "sqlparse>=0.5.3",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli[local]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "hockey_pipeline"
registry_modules = [
    "hockey_pipeline.components.*",
]


